# kostlabs

./: .gitignore  Makefile  README.md  deploy_checklist.md  package-lock.json
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/assets/common/: enums.ts
client/src/assets/stylesheets/: _colors.scss  index.scss
client/src/components/: SideNav.vue
client/src/pages/: About.vue  Blog.vue  Home.vue  Photography.vue  Projects.vue  _router.ts
server/: Cargo.toml  README.md
server/src/: main.rs
